# qrate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SETUP.md  pyproject.toml  setup_template.py
.cursor/plans/: qrate_compiler_roadmap_512a4790.plan.md  qrate_image_compiler_6f7eafe3.plan.md
.github/workflows/: publish.yml  test.yml  test.yml.example
examples/: README.md  basic_example.py
scripts/: check.sh  pre-commit.template
src/PACKAGE_NAME/: __init__.py  core.py  utils.py
src/qrate/: __init__.py  analyze.py  db.py  export.py  group.py  ingest.py  parallel.py  score.py  ui.py
src/qrate/scoring/: __init__.py  color.py  composition.py  renaissance.py  technical.py  types.py  utils.py
tests/: __init__.py  test_analyze.py  test_core.py  test_db.py  test_export.py  test_group.py  test_ingest.py  test_qrate.py  test_score.py  test_utils.py
