[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrate"
version = "0.1.0"
description = "Select RAW files and export paths to text file"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "swap357" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
qrate = "qrate:main"

[project.urls]
Repository = "https://github.com/swap357/qrate"

[tool.hatch.build.targets.wheel]
packages = ["src/qrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
